Fix the jumping

--- a/packages/edit-site/src/components/sidebar-navigation-item/style.scss
+++ b/packages/edit-site/src/components/sidebar-navigation-item/style.scss
@@ -1,5 +1,6 @@
 .edit-site-sidebar-navigation-item.components-item {
 	color: $gray-600;
+	border-width: $border-width-tab;
 
 	&:hover,
 	&:focus {
@@ -11,5 +12,6 @@
 	&[aria-current] {
 		color: $white;
 		background: var(--wp-admin-theme-color);
+		border-width: $border-width-tab;
 	}
 }
